--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/toy1.webp
+     - assets/images/toy2.jpeg
+     - assets/images/toy3.webp
+     - assets/images/toy4.webp
+     - assets/images/toy5.jpeg
+     - assets/images/toy6.webp
+     - assets/images/toy7.jpg
+     - assets/images/toy8.webp
+     - assets/images/toy9.jpeg
+     - assets/images/toy10.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
